fix table style issues on firefox

--- a/numerc/static/numerc/styles.css
+++ b/numerc/static/numerc/styles.css
@@ -568,6 +568,50 @@
 		line-height: calc(1ex / 0.32);
 		margin: calc(0.7ex / 0.32) 0;
 	}
+	section h2 + p, 
+	section h3 + p, 
+	section h4 + p, 
+	section h5 + p, 
+	section h6 + p {
+		margin-top: 0; 
+		padding-top: 0;
+	}
+
+/* PopUp - Class names are used in JavaScript code */
+	.pop {
+		cursor: pointer;
+		border-bottom: dotted thin rgb(146, 146, 146);
+	}
+	.popText {
+		visibility: hidden;
+		opacity: 0;
+		max-height: 0px;
+		max-width: 0px;
+		transition: max-height 0s, opacity 0s, visibility 0.2s linear;
+	}
+	.show {
+		position: absolute;
+		z-index: 1;
+		background: white;
+		border: solid thin lightgray;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+		color: var(--textColor);
+		padding: .5em;
+		font-weight: bold;
+		
+		visibility: visible;
+		opacity: 1;
+		max-height: 100vh;
+		max-width: fit-content;
+		transition: visibility 0.5s, opacity 0.7s, max-height 0.7s linear;
+	}
+	.show p {
+		padding: 0.2rem;
+		margin: 0;
+		font-size: 0.7rem;
+	}
+
+
 /* Drop cap */
 	span.drop {
 		float: left;
@@ -821,8 +865,6 @@
 	table td p {margin: 0; padding: 0;}
 	th,td {
 		border: solid 1px rgb(175, 175, 175);
-		max-width: fit-content;
-		padding: 0.2vmin;
 		text-align: left;
 	}
 	table.heading_center th {text-align: center;}
@@ -851,16 +893,19 @@
 	}
 	table.mono td {
 		padding: 0.2em;
+		max-width: none;
 		text-align: center;
 		font-family: var(--mono);
 		font-size: 0.75rem;
 	}
 	table.array {
 		border: none;
+		margin: 0;
 	}
 	table.array * {
+		font-size: 0.75rem;
 		text-align: center;
-		padding: 0.4em;
+		padding: 0.5em;
 		padding-top: 0;
 		padding-bottom: 0;
 	}
@@ -939,7 +984,7 @@
 		display: block;
 		padding: 0;
 		margin: 0;
-		font-size: 0.75rem;
+		font-size: 0.65rem;
 		color: rgb(82, 82, 82);
 		counter-increment: lineNumber;
 	}
